Setup gradle run & update README.md

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'java'
-    id("io.freefair.lombok") version "9.2.0"
+    id 'application'
+    id "io.freefair.lombok" version "9.2.0"
 }
 
 group = 'org.artem'
 version = '1.0-SNAPSHOT'
-
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
@@ -24,6 +24,15 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+application {
+    mainClass = 'com.tax.calculator.TaxReportRunner'
+}
+
+run {
+    systemProperty "broker.report", System.getProperty("broker.report")
+    systemProperty "rates.file", System.getProperty("rates.file")
 }
 
 test {
